instead of adding event listeners, add event and class binding
see:
- https://angular.io/guide/event-binding
- https://angular.io/api/common/NgClass

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -20,7 +20,10 @@
     </div>
     <div class="controls">
       <div class="play-container">
-        <div class="toggle-play play">
+        <div class="toggle-play"
+            [ngClass]="{ 'play': audio == null || audio.paused, 'pause': !audio.paused}"
+            (click)="togglePlay()"
+            >
       </div>
       </div>
       <div class="time">
